// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomerInfoWrapper component should only 2 children and a Show More button because, the Show More button was clicked once, then all 4 children were rendered and the Less Info button was clicked 1`] = `
<div>
  <p>
    a
  </p>
  <p>
    b
  </p>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-a432 container ui-button-ghost-a432 ui-button-primary-a432 ui-button-small-a432"
    type="button"
  >
    <span
      class="ui-button-content-a432"
    >
      Show 
      more
    </span>
    <i
      aria-hidden="true"
      class="material-icons ui-buttonicon-icon-74a9 ui-buttonicon-small-74a9"
    >
      expand_more
    </i>
  </button>
</div>
`;

exports[`CustomerInfoWrapper component should render all 4 children and a Show Less button because the Show More button was clicked 1`] = `
<div>
  <p>
    a
  </p>
  <p>
    b
  </p>
  <p>
    c
  </p>
  <p>
    d
  </p>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-a432 container ui-button-ghost-a432 ui-button-primary-a432 ui-button-small-a432"
    type="button"
  >
    <span
      class="ui-button-content-a432"
    >
      Show 
      less
    </span>
    <i
      aria-hidden="true"
      class="material-icons ui-buttonicon-icon-74a9 ui-buttonicon-small-74a9"
    >
      expand_less
    </i>
  </button>
</div>
`;

exports[`CustomerInfoWrapper component should render child a and child b with the show more button because # of children is > 2 1`] = `
<div>
  <p>
    a
  </p>
  <p>
    b
  </p>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-a432 container ui-button-ghost-a432 ui-button-primary-a432 ui-button-small-a432"
    type="button"
  >
    <span
      class="ui-button-content-a432"
    >
      Show 
      more
    </span>
    <i
      aria-hidden="true"
      class="material-icons ui-buttonicon-icon-74a9 ui-buttonicon-small-74a9"
    >
      expand_more
    </i>
  </button>
</div>
`;

exports[`CustomerInfoWrapper component should render child a and no show more button because there is only one child 1`] = `
<div>
  <p>
    a
  </p>
</div>
`;

exports[`CustomerInfoWrapper component should render child a and no show more button because there is only one defined child 1`] = `
<div>
  <p>
    a
  </p>
</div>
`;
